--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="fun, stratagem, github, waterlemon">
         <!--thanks to @WilardzySenpai-->
     <link rel="stylesheet" href="css/loading-screen.css" />
-	<script src="javascript/main.js"></script>
+	<script src="js/main.js"></script>
     <!--Creates Discord Widget-->
         <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
       new Crate({
